// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/dropdown/demo/basic.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Hover me 
  <i
    class="anticon anticon-down"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</a>
`;

exports[`renders ./components/dropdown/demo/context-menu.md correctly 1`] = `
<span
  class="ant-dropdown-trigger"
  style="user-select:none"
>
  Right Click on Me
</span>
`;

exports[`renders ./components/dropdown/demo/dropdown-button.md correctly 1`] = `
<div>
  <div
    class="ant-btn-group ant-dropdown-button"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="ant-btn ant-dropdown-trigger ant-btn-default ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-ellipsis"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="ellipsis"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M128 512a64 64 0 1 0 128 0 64 64 0 1 0-128 0zM448 512a64 64 0 1 0 128 0 64 64 0 1 0-128 0zM768 512a64 64 0 1 0 128 0 64 64 0 1 0-128 0z"
          />
        </svg>
      </i>
    </button>
  </div>
  <div
    class="ant-btn-group ant-dropdown-button"
    style="margin-left:8px"
  >
    <button
      class="ant-btn ant-btn-default"
      disabled=""
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="ant-btn ant-dropdown-trigger ant-btn-default ant-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-ellipsis"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="ellipsis"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M128 512a64 64 0 1 0 128 0 64 64 0 1 0-128 0zM448 512a64 64 0 1 0 128 0 64 64 0 1 0-128 0zM768 512a64 64 0 1 0 128 0 64 64 0 1 0-128 0z"
          />
        </svg>
      </i>
    </button>
  </div>
  <button
    class="ant-btn ant-dropdown-trigger"
    style="margin-left:8px"
    type="button"
  >
    <span>
      Button 
    </span>
    <i
      class="anticon anticon-down"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="down"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
        />
      </svg>
    </i>
  </button>
</div>
`;

exports[`renders ./components/dropdown/demo/event.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Hover me, Click menu item 
  <i
    class="anticon anticon-down"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</a>
`;

exports[`renders ./components/dropdown/demo/item.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Hover me 
  <i
    class="anticon anticon-down"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</a>
`;

exports[`renders ./components/dropdown/demo/overlay-visible.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Hover me 
  <i
    class="anticon anticon-down"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</a>
`;

exports[`renders ./components/dropdown/demo/placement.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomLeft
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomCenter
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      bottomRight
    </span>
  </button>
  <br />
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topLeft
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topCenter
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      topRight
    </span>
  </button>
</div>
`;

exports[`renders ./components/dropdown/demo/sub-menu.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Cascading menu 
  <i
    class="anticon anticon-down"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</a>
`;

exports[`renders ./components/dropdown/demo/trigger.md correctly 1`] = `
<a
  class="ant-dropdown-link ant-dropdown-trigger"
  href="#"
>
  Click me 
  <i
    class="anticon anticon-down"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</a>
`;
